# tsr

./: CMakeLists.txt  LICENSE  README.md
examples/: await.ts  class.ts  hello.ts  path.ts  setInterval.ts
examples/require/: a.ts  b.ts  c.ts
src/: Context.cpp  Context.hpp  main.cpp  ts.cpp  ts.duk.cpp  ts.hpp
src/internal/: console.js  promise.js  require.js  timers.js  util.js
src/modules/: path.ts
src/native/: require.cpp  require.hpp  timers.cpp  timers.hpp
src/util/: path.cpp  path.hpp  ts.js
tools/: CMakeLists.txt
tools/duk/: CMakeLists.txt
tools/duk/src/: main.cpp
tools/toh/: CMakeLists.txt
tools/toh/include/: toh.hpp
tools/toh/src/: main.cpp  toh.cpp
